--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
     </header>
     <section class="fotos">
         <!-- Aquí puedes agregar tus imágenes -->
-        <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita Quiteña JaggerMeister - Licorería al norte de Quito con entregas a domicilio las 24 horas La Huequita Quiteña" style="width: 100%">
+        <img src="./Imagenes/La Huequita Quiteña.webp" alt="La Huequita Quiteña JaggerMeister - Licorería al norte de Quito con entregas a domicilio las 24 horas La Huequita Quiteña" style="width: 100%">
     </section>
     <div class="hamburguesa-icono">
         <div class="barra"></div>
@@ -98,7 +98,7 @@
     </div>
     <div class="instagram-div">
         <a href="https://www.instagram.com/lahuequita_quitena/" target="_blank" class="instagram-btn">       
-            <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.jpg" alt="WhatsApp">
+            <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.webp" alt="WhatsApp">
         </a>
     </div>
     <div class="whatsapp-div">
