--- a/Index.html
+++ b/Index.html
@@ -98,12 +98,12 @@
     </div>
     <div class="instagram-div">
         <a href="https://www.instagram.com/lahuequita_quitena/" target="_blank" class="instagram-btn">       
-            <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.webp" alt="WhatsApp">
+            <img class="instagram-icon" src="./Imagenes/instagram-icon-transparent-vector-12.webp" alt="Instagram de Licorería La Huequita Quiteña para Licores a Domicilio en Quito Norte, barrio de Carcelen">
         </a>
     </div>
     <div class="whatsapp-div">
         <a href="https://wa.me/593983628816" target="_blank" class="whatsapp-btn">       
-            <img class="whatsapp-icon" src="./Imagenes/whatsapp-navidadjpg.webp" alt="WhatsApp">
+            <img class="whatsapp-icon" src="./Imagenes/whatsapp-navidadjpg.webp" alt="Numero de WhatsApp para entrega de licores a domicilio de la Licorería La Huequita Quiteña">
         </a>
     </div>
 
