--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
+            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de Licorería La Huequita Quiteña, con entrega a domicilio en la ciudad de Quito">
             <h2 class="Nombre-empresa">La Huequita Quiteña</h2>
         </div>
         <div class="search-bar">
@@ -69,7 +69,7 @@
         </div>
         <div class="blog-entry">
             <h3>Explorando los Sabores del Vino y Licores en Mi Viaje por América del Sur con La Huequita Quiteña</h3>
-            <img src="/Imagenes/Blog/La-huequita-quiteña-SudAmerica.jpg" alt="Sudamerica Alcoholica - La Huequita Quiteña" width="30%">
+            <img src="/Imagenes/Blog/La-huequita-quiteña-SudAmerica.jpg" alt="Sudamerica Alcoholica - Licorería La Huequita Quiteña abierta las 24 horas con servicio a domicilio" width="30%">
             <p>¡Hola a todos! Mi nombre es Luis, y soy un viajero, mochilero y nómada digital que emprendió un emocionante viaje desde Quito, Ecuador, a través de Sudamérica para explorar el apasionante mundo de los licores, el vino, la cultura y la gastronomía en nuestra hermosa región. Lo mejor de todo es que este viaje es posible gracias a mi trabajo en la Licorería "La Huequita Quiteña", lo que me ha permitido combinar mi pasión por los viajes con mi amor por los licores...</p>
             <a class="styled-link" href="entrada1.html">Leer más</a>
         </div>
