--- a/ecuador-vs-venezuela.html
+++ b/ecuador-vs-venezuela.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
+            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de Licorería La Huequita Quiteña con servicio a domicilio las 24 horas, sector Carcelen">
             <h2 class="Nombre-empresa">La Huequita Quiteña</h2>
         </div>
         <div class="search-bar">
