--- a/entrada1.html
+++ b/entrada1.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de La Huequita Quiteña">
+            <img src="./Imagenes/Logo La Huequita 200px.png" alt="Logo de Licorería La Huequita Quiteña con entrenga a domicilio en el Norte de Quito">
             <h2 class="Nombre-empresa">La Huequita Quiteña</h2>
         </div>
         <div class="search-bar">
@@ -57,12 +57,12 @@
     </div>
     <section class="blog-entry">
         <h3>Explorando los Sabores del Vino y Licores en Mi Viaje por América del Sur con La Huequita Quiteña</h3>
-        <img src="/Imagenes/Blog/La-huequita-quiteña-SudAmerica.jpg" alt="Sudamerica Alcoholica - La Huequita Quiteña">
+        <img src="/Imagenes/Blog/La-huequita-quiteña-SudAmerica.jpg" alt="Sudamerica Alcoholica - Licorería La Huequita Quiteña con entregas a domicilio en el norte de Quito">
         <p>¡Hola a todos! Mi nombre es Luis, y soy un viajero, mochilero y nómada digital que emprendió un emocionante viaje desde Quito, Ecuador, a través de Sudamérica para explorar el apasionante mundo de los licores, el vino, la cultura y la gastronomía en nuestra hermosa región. Lo mejor de todo es que este viaje es posible gracias a mi trabajo en la Licorería "La Huequita Quiteña", lo que me ha permitido combinar mi pasión por los viajes con mi amor por los licores. Además, este empleo me proporciona los recursos necesarios para continuar mi exploración por los rincones más encantadores de América del Sur.</p>
-        <img src="/Imagenes/Blog/Mochilero por Sudamerica - La Huequita Quiteña.jpg" alt="Mochilero por sudamerica - La huequita Quiteña">
+        <img src="/Imagenes/Blog/Mochilero por Sudamerica - La Huequita Quiteña.jpg" alt="Mochilero por sudamerica - Licorería La huequita Quiteña con entregas a domicilio 24 horas ubicada al norte de Quito">
         <h4>¿Qué es La Huequita Quiteña?</h4>
         <p>"La Huequita Quiteña" es mucho más que una simple licorería. Es un lugar donde los amantes de los licores encuentran una selección excepcional de bebidas, un equipo apasionado por el mundo de los licores y un compromiso constante con la calidad y la satisfacción del cliente. Estamos ubicados en Carcelen Alto. Aquí, no solo encontrarás una amplia variedad de licores y vinos, sino también la conveniencia de entrega a domicilio en todo Quito.</p>
-        <img src="/Imagenes/Blog/La Huequita Quiteña.jpg" alt="La Huequita Quiteña">
+        <img src="/Imagenes/Blog/La Huequita Quiteña.jpg" alt="Logo de Licorería La Huequita Quiteña con servicio a domicilio 24 horas ubicada en Quito">
         <h4>Apoya mi Aventura y Descubre Nuestro Catálogo</h4>
         <p>Quiero invitarte a explorar nuestro catálogo en línea, que ofrece una amplia gama de licores de alta calidad. Cada compra que realices en "La Huequita Quiteña" no solo te brinda la oportunidad de disfrutar de excelentes licores, sino que también me ayuda a continuar descubriendo y compartiendo mis experiencias en este emocionante viaje. Para acceder al catálogo y realizar tu pedido, simplemente visita <a href="index.html">nuestro sitio web</a>. Tu apoyo es fundamental y apreciado.</p>
         <h4>Conéctate Conmigo y Sígueme en Mis Aventuras</h4>
