--- a/historia.html
+++ b/historia.html
@@ -18,7 +18,7 @@
 </header>
 <section class="fotos">
     <!-- Aquí puedes agregar tus imágenes -->
-    <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
+    <img src="./Imagenes/La Huequita Quiteña.webp" alt="La Huequita" style="width: 100%">
 </section>
 <div class="todos-los-menus">
     <nav class="nav">
@@ -43,15 +43,15 @@
     <div class="container">
         <h1 class="titulo">Nuestra Historia</h1>
         <p class="introduccion">
-            Hace unos años, en 2015, nació La Huequita Quiteña, un emprendimiento que surgió con pasión por la calidad y la excelencia en la ciudad de Quito, específicamente en el sector Carcelén y sus alrededores. Desde el principio, nuestro enfoque fue claro: satisfacer las demandas de un mercado exclusivo que valoraba la calidad y la seguridad en la selección de sus licores.
+            Hace unos años, en 2015, nació Licorería La Huequita Quiteña, un emprendimiento que surgió con pasión por la calidad y la excelencia de nuestros Licores en la ciudad de Quito, específicamente en el sector Carcelén Alto, y con servicio a domicilio en los sectores de Carlen Bajo, Coraszon de jesus, Carapungo Calderon, gracias al servicio de uber Eats, pero tambien en los ultimos meses hemos implementado nuestro catalogo para ajustar nuestra servicio de entrega a domicilio en la ciudad de Quito. Desde el principio, nuestro enfoque fue claro: satisfacer las demandas de un mercado exclusivo que valoraba la calidad y la seguridad en la selección de sus licores, ya que mantener calidad y saber que vas a recibir un producto sin alteraciones es mucho mas confiable que algo que tal vez te pueda costar mas barato, pero que no tienes la certeza fde como fue elaborado.
         </p>
 
         <p class="parrafo">
-            En La Huequita Quiteña, nos dedicamos a la venta de una amplia gama de vinos y licores de primera categoría. Nuestro catálogo incluye selecciones excepcionales de whisky, ron, tequila, gin, aguardiente y muchos otros licores que deleitan a los paladares más exigentes. Creemos que cada botella que vendemos cuenta una historia única y queremos compartir esas historias con nuestros clientes.
+            En La Licorería La Huequita Quiteña, nos dedicamos a la venta de una amplia gama de vinos y licores de primera categoría. Nuestro catálogo incluye selecciones excepcionales de whisky, ron, tequila, gin, aguardiente y muchos otros licores que deleitan a los paladares más exigentes. Creemos que cada botella que vendemos cuenta una historia única y queremos compartir esas historias con nuestros clientes.
         </p>
 
         <p class="parrafo">
-            Pero no nos limitamos a ser solo una tienda física. Reconociendo la importancia de la comodidad en la vida moderna, hemos ampliado nuestros horizontes. Ahora, puedes encontrarnos en Uber Eats, lo que significa que puedes disfrutar de nuestros productos exclusivos desde la comodidad de tu hogar. Además, ofrecemos un servicio de entrega a domicilio para que tus bebidas favoritas lleguen directamente a tu puerta.
+            Pero no nos limitamos a ser solo una tienda física. Reconociendo la importancia de la comodidad en la vida moderna, hemos ampliado nuestros horizontes. Ahora, puedes encontrarnos en Uber Eats, lo que significa que puedes disfrutar de nuestros productos exclusivos desde la comodidad de tu hogar. Además, ofrecemos un servicio de entrega a domicilio con un mejor precio y con entrega asegurada de mas de 10 años en el mercado para que tus bebidas favoritas lleguen directamente a tu puerta. Este servicio lo puedes realizar directamente desde nuestra <a href="Index.html"> tienda oficial</a>, agregando los produtos que requieras al carrito y haciendo el pedido directamente a nuestro whatsapp
         </p>
 
         <p class="parrafo">
