--- a/politicas-de-devolucion.html
+++ b/politicas-de-devolucion.html
@@ -18,7 +18,7 @@
 </header>
 <section class="fotos">
     <!-- Aquí puedes agregar tus imágenes -->
-    <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
+    <img src="./Imagenes/La Huequita Quiteña.webp" alt="La Huequita" style="width: 100%">
 </section>
 <div class="todos-los-menus">
     <nav class="nav">
