--- a/carrito.html
+++ b/carrito.html
@@ -30,7 +30,7 @@
     </header> 
     <section class="fotos">
         <!-- Aquí puedes agregar tus imágenes -->
-        <img src="./Imagenes/La Huequita Quiteña.png" alt="La Huequita" style="width: 100%">
+        <img src="./Imagenes/La Huequita Quiteña.webp" alt="La Huequita" style="width: 100%">
     </section>
     <nav>
         <ul class="menu">
@@ -49,7 +49,7 @@
 
                 <div id="carrito-productos" class="carrito-productos disabled">
                     <div class="carrito-producto">
-                        <img class="carrito-producto-imagen" src="Imagenes/Wisky/Jonnie01.webp" alt="">
+                        <img class="carrito-producto-imagen" src="Imagenes/Wisky/Jonnie01.webp" alt="Imagen de Carriot para la licorería al norte de Quito Licorería La huequita Quiteña">
                         <div class="carrito-producto-titulo">
                             <small>Título</small>
                             <h3>Alsdasd</h3>
