--- a/Antioqueño-Aguardiente-Colombiano-para-Ecuador-y-el-mundo.html
+++ b/Antioqueño-Aguardiente-Colombiano-para-Ecuador-y-el-mundo.html
@@ -51,7 +51,7 @@
         </nav>
     </div>
     <section class="blog-entry">
-        <h3>Antioqueño, Aguardiente Colombiano para Ecuador y para el mundo</h3>
+        <h3>Antioqueño Aguardiente Colombiano para Ecuador y para el mundo - Encuentra la mejor calidad y orininalidad en Licorería la Huequita Quiteña</h3>
         <img src="" alt="Aguardiente Antioqueño - Licorería La Huequita Quiteña con entregas a domicilio en el norte de Quito">
         <p>Uno de nuestros productos estrella en Nuestra Licorería La huequita Quiteña es el ya bien Conocido Aguardiente Antioqueño un producto importado de Colombia que se ha gano el corazon de muchos de nuestros clientes, y es que su sabor y su versatilidad para hacer mezclas hacen del Aguardiente Antioqueño algo imperdible para todos los amantes del buen licor y es que el antioqueño sin azucar, el que tiene la tapa azul es una de las mejores opciones ya que su sabo es neutro y puede ser combinado con agua mineral, jugo, o la bebida de tu preferencia, aunque nunca falta el purista que lo toma al natural, y que para tener una mejor experiencia lo mezcla con sal y limón </p>
         <img src="./Imagenes/Antioqueño.png" alt="Una fiesta disfrutando del Aguardiente Antioqueño - Licorería La huequita Quiteña con entregas a domicilio 24 horas ubicada al norte de Quito">
