--- a/blog.html
+++ b/blog.html
@@ -57,9 +57,9 @@
     <section class="blog-entries">
         <div class="blog-entry">
             <h3>Antioqueño Aguardiente Colombiano para Ecuador y para el mundo - Encuentra la mejor calidad y orininalidad en Licorería la Huequita Quiteña</h3>
-            <img src="/Imagenes/Blog/Canelazo.jpg" alt="El Canelazo - La Huequita Quiteña Licorería del Norte de Quito abierta las 24 horas con servicio a domicilio" width="50%">
-            <p>¡Saludos a los exploradores del sabor desde el corazón de Quito, donde "Licorería La Huequita Quiteña" nos invita a sumergirnos en la autenticidad del canelazo! En este recorrido, desvelaremos el secreto detrás de esta bebida caliente que enamora a cada paladar, con un toque especial de Zhumir Naranjilla, el licor de caña que transforma cada sorbo en una experiencia única.</p>
-            <a class="styled-link" href="Canelazo-quiteño.html">Leer más</a>
+            <img src="./Imagenes/Antioqueño.png" alt="Aguardiente Antioqueño - Licorería La Huequita Quiteña con entregas a domicilio en el norte de Quito" width="50%">
+            <p>Uno de nuestros productos estrella en Nuestra Licorería La huequita Quiteña es el ya bien Conocido Aguardiente Antioqueño un producto importado de Colombia que se ha gano el corazon de muchos de nuestros clientes, y es que su sabor y su versatilidad para hacer mezclas hacen del Aguardiente Antioqueño algo imperdible para todos los amantes del buen licor y es que el antioqueño sin azucar, el que tiene la tapa azul es una de las mejores opciones ya que su sabo es neutro y puede ser combinado con agua mineral, jugo, o la bebida de tu preferencia, aunque nunca falta el purista que lo toma al natural, y que para tener una mejor experiencia lo mezcla con sal y limón </p>
+            <a class="styled-link" href="Antioqueño-Aguardiente-Colombiano-para-Ecuador-y-el-mundo.html">Leer más</a>
         </div>
         <div class="blog-entry">
         <div class="blog-entry">
