--- a/historia.html
+++ b/historia.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="historia.css">
-    <title>Políticas de Devolución - La Huequita Quiteña</title>
+    <title>Nuestra Historia - La Huequita Quiteña</title>
 </head>
 <header>
     <div class="logo">
@@ -41,7 +41,7 @@
 </div> 
 <section class="contenido">
     <div class="container">
-        <h1 class="titulo">Nuestra Historia</h1>
+        <h1 class="titulo">La Huequita Quiteña - Nuestra Historia</h1>
         <p class="introduccion">
             Hace unos años, en 2015, nació Licorería La Huequita Quiteña, un emprendimiento que surgió con pasión por la calidad y la excelencia de nuestros Licores en la ciudad de Quito, específicamente en el sector Carcelén Alto, y con servicio a domicilio en los sectores de Carlen Bajo, Coraszon de jesus, Carapungo Calderon, gracias al servicio de uber Eats, pero tambien en los ultimos meses hemos implementado nuestro catalogo para ajustar nuestra servicio de entrega a domicilio en la ciudad de Quito. Desde el principio, nuestro enfoque fue claro: satisfacer las demandas de un mercado exclusivo que valoraba la calidad y la seguridad en la selección de sus licores, ya que mantener calidad y saber que vas a recibir un producto sin alteraciones es mucho mas confiable que algo que tal vez te pueda costar mas barato, pero que no tienes la certeza fde como fue elaborado.
         </p>
