--- a/blog.html
+++ b/blog.html
@@ -56,6 +56,13 @@
     </div>
     <section class="blog-entries">
         <div class="blog-entry">
+            <h3>El jagger mas barato - Encuentra la mejor calidad y orininalidad en Licorería la Huequita Quiteña</h3>
+            <img src="./Imagenes/Blog/Jagger de los pobres.jpg" alt="Jagger de los pobres - Licorería La Huequita Quiteña con entregas a domicilio en el norte de Quito" width="50%">
+            <p>¡Saludos desde Quito, la tierra donde la creatividad en la mezcla de tragos se mezcla con la viveza criolla! Hoy te quiero contar sobre el famoso "Jagger de los pobres", una invención local que ha conquistado las noches quiteñas. ¡Prepárate para una experiencia única y asequible! </p>
+            <a class="styled-link" href="Jagger-de-los-pobres.html">Leer más</a>
+        </div>
+        <div class="blog-entry">
+        <div class="blog-entry">
             <h3>Antioqueño Aguardiente Colombiano para Ecuador y para el mundo - Encuentra la mejor calidad y orininalidad en Licorería la Huequita Quiteña</h3>
             <img src="./Imagenes/Antioqueño.png" alt="Aguardiente Antioqueño - Licorería La Huequita Quiteña con entregas a domicilio en el norte de Quito" width="50%">
             <p>Uno de nuestros productos estrella en Nuestra Licorería La huequita Quiteña es el ya bien Conocido Aguardiente Antioqueño un producto importado de Colombia que se ha gano el corazon de muchos de nuestros clientes, y es que su sabor y su versatilidad para hacer mezclas hacen del Aguardiente Antioqueño algo imperdible para todos los amantes del buen licor y es que el antioqueño sin azucar, el que tiene la tapa azul es una de las mejores opciones ya que su sabo es neutro y puede ser combinado con agua mineral, jugo, o la bebida de tu preferencia, aunque nunca falta el purista que lo toma al natural, y que para tener una mejor experiencia lo mezcla con sal y limón </p>
